// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TippyTooltip /> renders correctly 1`] = `
<Tooltip__StyledTooltip
  arrow={true}
  size="big"
/>
`;

exports[`<TippyTooltip /> should render when position tip is provided 1`] = `
<Tooltip__StyledTooltip
  arrow={true}
  position="bottom"
  size="big"
/>
`;

exports[`<TippyTooltip /> should render when tip prop is provided 1`] = `
<Tooltip__StyledTooltip
  arrow={true}
  size="big"
/>
`;
